Lista de times e campeonatos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,18 @@
 {
-    "editor.codeActionsOnSave": true
+    "editor.codeActionsOnSave": true,
+    "sqltools.connections": [
+        {
+            "database": "DB_FUTTS",
+            "driver": "MySQL",
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "name": "futs",
+            "password": "root",
+            "port": 3306,
+            "previewLimit": 50,
+            "server": "localhost",
+            "username": "root"
+        }
+    ]
 }
