--- a/package.json
+++ b/package.json
@@ -78,6 +78,9 @@
 		"@types/object-path": "^0.11.0",
 		"codelyzer": "^5.2.0",
 		"css-loader": "^3.2.0",
+		"eslint": "^7.14.0",
+		"eslint-config-prettier": "^6.15.0",
+		"eslint-plugin-prettier": "^3.1.4",
 		"jasmine-core": "~3.4.0",
 		"jasmine-spec-reporter": "~4.2.1",
 		"karma": "^5.1.1",
@@ -86,6 +89,7 @@
 		"karma-jasmine": "~2.0.1",
 		"karma-jasmine-html-reporter": "^1.4.2",
 		"node-sass": "^4.13.0",
+		"prettier": "^2.2.0",
 		"protractor": "~7.0.0",
 		"ts-node": "~8.2.0",
 		"tslint": "~6.1.3",
