--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "^0.1100.2",
+		"@angular-devkit/core": "^11.0.2",
 		"@angular/cli": "^11.0.2",
 		"@angular/compiler-cli": "^10.2.3",
 		"@angular/language-service": "^10.2.3",
