--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
+    "sass": "^1.29.0",
     "socicon": "^3.0.5",
     "tooltip.js": "^1.3.3",
     "tslib": "^1.10.0",
@@ -89,7 +90,6 @@
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "node-sass": "^4.13.0",
     "prettier": "^2.2.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.2.0",
