--- a/angular.json
+++ b/angular.json
@@ -22,26 +22,33 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets", "src/.htaccess"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/.htaccess"
+            ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
-              "node_modules/socicon/css/socicon.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "src/assets/plugins/line-awesome/css/line-awesome.css",
-              "src/assets/plugins/flaticon/flaticon.css",
-              "src/assets/plugins/flaticon2/flaticon.css",
-              "src/assets/sass/style.angular.scss"
+              	"src/styles.scss",
+				"node_modules/bootstrap/dist/css/bootstrap.css",
+				"node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
+				"node_modules/socicon/css/socicon.css",
+				"node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+				"src/assets/plugins/line-awesome/css/line-awesome.css",
+				"src/assets/plugins/flaticon/flaticon.css",
+				"src/assets/plugins/flaticon2/flaticon.css",
+				"src/assets/sass/style.angular.scss"
             ],
             "scripts": [
-              "node_modules/popper.js/dist/umd/popper.js",
-              "node_modules/tooltip.js/dist/umd/tooltip.min.js",
-              "node_modules/perfect-scrollbar/dist/perfect-scrollbar.js"
+				"node_modules/popper.js/dist/umd/popper.js",
+				"node_modules/tooltip.js/dist/umd/tooltip.min.js",
+				"node_modules/perfect-scrollbar/dist/perfect-scrollbar.js"
             ],
-            "stylePreprocessorOptions": {
-              "includePaths": ["src/assets"]
-            }
+		  	"stylePreprocessorOptions": {
+			  "includePaths": [
+				  "src/assets"
+			  ]
+		  	},
+            "es5BrowserSupport": true
           },
           "configurations": {
             "production": {
@@ -51,8 +58,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "scripts": [],
-              "optimization": true,
+			  "scripts": [],
+			  "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
               "extractCss": true,
@@ -95,16 +102,25 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "src/styles.scss"
+            ],
             "scripts": [],
-            "assets": ["src/assets"]
+            "assets": [
+              "src/assets"
+            ]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
-            "exclude": ["**/node_modules/**"]
+            "tsConfig": [
+              "src/tsconfig.app.json",
+              "src/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -130,14 +146,13 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
     }
   },
-  "defaultProject": "metronic",
-  "cli": {
-    "analytics": "6dbe403c-148f-4b7a-97d8-dd99af658245"
-  }
+  "defaultProject": "metronic"
 }
