--- a/package.json
+++ b/package.json
@@ -1,104 +1,98 @@
 {
-  "name": "futs",
-  "version": "1.0.0",
-  "description": "Pacote futs",
-  "scripts": {
-    "ng": "ng",
-    "start": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "bundle-report": "webpack-bundle-analyzer dist/stats.json",
-    "rtl": "webpack"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular-builders/custom-webpack": "^10.0.1",
-    "@angular/animations": "^11.0.2",
-    "@angular/cdk": "^11.0.0",
-    "@angular/common": "^11.0.2",
-    "@angular/compiler": "^11.0.2",
-    "@angular/core": "^11.0.2",
-    "@angular/forms": "^11.0.2",
-    "@angular/localize": "^11.0.2",
-    "@angular/platform-browser": "^11.0.2",
-    "@angular/platform-browser-dynamic": "^11.0.2",
-    "@angular/platform-server": "^11.0.2",
-    "@angular/router": "^11.0.2",
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
-    "@ngrx/effects": "^10.0.1",
-    "@ngrx/entity": "^10.0.1",
-    "@ngrx/router-store": "^10.0.1",
-    "@ngrx/store": "^10.0.1",
-    "@ngrx/store-devtools": "^10.0.1",
-    "@ngx-loading-bar/core": "^4.2.0",
-    "@ngx-translate/core": "^11.0.1",
-    "@types/lodash": "^4.14.144",
-    "angular-in-memory-web-api": "^0.8.0",
-    "bootstrap": "^4.3.1",
-    "chart.js": "^2.9.2",
-    "chartist": "^0.11.4",
-    "classlist.js": "^1.1.20150312",
-    "core-js": "^3.3.6",
-    "highlight.js": "^9.16.2",
-    "lodash": "^4.17.11",
-    "material-design-icons": "^3.0.1",
-    "moment": "^2.24.0",
-    "ng-inline-svg": "^8.5.1",
-    "ngrx-store-freeze": "^0.2.4",
-    "ngx-clipboard": "^12.2.0",
-    "ngx-daterangepicker-material": "^2.1.7",
-    "ngx-highlightjs": "^3.0.3",
-    "ngx-perfect-scrollbar": "^8.0.0",
-    "ngx-permissions": "^7.0.3",
-    "object-path": "^0.11.4",
-    "perfect-scrollbar": "^1.4.0",
-    "popper.js": "^1.16.0",
-    "rxjs": "^6.5.3",
-    "sass": "^1.29.0",
-    "socicon": "^3.0.5",
-    "tooltip.js": "^1.3.3",
-    "tslib": "^1.10.0",
-    "web-animations-js": "^2.3.2",
-    "zone.js": "~0.10.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.2",
-    "@angular-devkit/core": "^11.0.2",
-    "@angular/cli": "^11.0.2",
-    "@angular/compiler-cli": "^11.0.2",
-    "@angular/language-service": "^11.0.2",
-    "@angular/material": "^11.0.1",
-    "@angular/material-moment-adapter": "^11.0.1",
-    "@ngrx/schematics": "^10.0.1",
-    "@types/chartist": "^0.9.46",
-    "@types/highlight.js": "^9.12.3",
-    "@types/jasmine": "^3.4.6",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.6",
-    "@types/object-path": "^0.11.0",
-    "codelyzer": "^5.2.0",
-    "css-loader": "^3.2.0",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "prettier": "^2.2.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.2.0",
-    "tslint": "~6.1.3",
-    "typescript": "~4.0.5",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-messages": "^2.0.4",
-    "webpack-rtl-plugin": "^2.0.0"
-  }
+    "name": "metronic-angular",
+    "version": "6.1.4",
+    "description": "Packages used by Angular",
+    "scripts": {
+        "ng": "ng",
+        "start": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve",
+        "build": "ng build --prod",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "bundle-report": "webpack-bundle-analyzer dist/stats.json",
+        "rtl": "webpack"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^8.2.13",
+        "@angular/cdk": "^8.2.3",
+        "@angular/common": "^8.2.13",
+        "@angular/compiler": "^8.2.13",
+        "@angular/core": "^8.2.13",
+        "@angular/forms": "^8.2.13",
+        "@angular/platform-browser": "^8.2.13",
+        "@angular/platform-browser-dynamic": "^8.2.13",
+        "@angular/platform-server": "^8.2.13",
+        "@angular/router": "^8.2.13",
+        "@fortawesome/fontawesome-free": "^5.11.2",
+        "@ng-bootstrap/ng-bootstrap": "^5.1.2",
+        "@ngrx/effects": "^8.4.0",
+        "@ngrx/entity": "^8.4.0",
+        "@ngrx/router-store": "^8.4.0",
+        "@ngrx/store": "^8.4.0",
+        "@ngrx/store-devtools": "^8.4.0",
+        "@ngx-loading-bar/core": "^4.2.0",
+        "@ngx-translate/core": "^11.0.1",
+        "@types/lodash": "^4.14.144",
+        "angular-in-memory-web-api": "^0.8.0",
+        "bootstrap": "^4.3.1",
+        "chart.js": "^2.9.2",
+        "chartist": "^0.11.4",
+        "classlist.js": "^1.1.20150312",
+        "core-js": "^3.3.6",
+        "hammerjs": "^2.0.8",
+        "highlight.js": "^9.16.2",
+        "lodash": "^4.17.11",
+        "material-design-icons": "^3.0.1",
+        "moment": "^2.24.0",
+        "ng-inline-svg": "^8.5.1",
+        "ngrx-store-freeze": "^0.2.4",
+        "ngx-clipboard": "^12.2.0",
+        "ngx-daterangepicker-material": "^2.1.7",
+        "ngx-highlightjs": "^3.0.3",
+        "ngx-perfect-scrollbar": "^8.0.0",
+        "ngx-permissions": "^7.0.3",
+        "object-path": "^0.11.4",
+        "perfect-scrollbar": "^1.4.0",
+        "popper.js": "^1.16.0",
+        "rxjs": "^6.5.3",
+        "socicon": "^3.0.5",
+        "tooltip.js": "^1.3.3",
+        "tslib": "^1.10.0",
+        "web-animations-js": "^2.3.2",
+        "zone.js": "~0.9.1"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^0.800.6",
+        "@angular/cli": "^8.3.17",
+        "@angular/compiler-cli": "^8.2.13",
+        "@angular/language-service": "^8.2.13",
+        "@angular/material": "^8.2.3",
+        "@angular/material-moment-adapter": "^8.2.3",
+        "@ngrx/schematics": "^8.4.0",
+        "@types/chartist": "^0.9.46",
+        "@types/highlight.js": "^9.12.3",
+        "@types/jasmine": "^3.4.6",
+        "@types/jasminewd2": "^2.0.8",
+        "@types/node": "^12.12.6",
+        "@types/object-path": "^0.11.0",
+        "codelyzer": "^5.2.0",
+        "css-loader": "^3.2.0",
+        "jasmine-core": "~3.4.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "^4.4.1",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "^2.0.5",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.2",
+        "node-sass": "^4.13.0",
+        "protractor": "~5.4.2",
+        "ts-node": "~8.2.0",
+        "tslint": "~5.17.0",
+        "typescript": "~3.4.5",
+        "webpack-bundle-analyzer": "^3.6.0",
+        "webpack-cli": "^3.3.10",
+        "webpack-messages": "^2.0.4",
+        "webpack-rtl-plugin": "^2.0.0"
+    }
 }
